--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN5c/BywVUsOFecNQFFFVTQ",
+      "authorship_tag": "ABX9TyNcBHgfJDXnEFyKm7JFeHBZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,23 +89,6 @@
       "cell_type": "markdown",
       "source": [
         "<a id=\"1\"></a>\n",
-        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b> ACERCA DEL DATASET </b></div>"
-      ],
-      "metadata": {
-        "id": "y26bVJnVgzb9"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "WxXTZpPsYa2b"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "<a id=\"1\"></a>\n",
         "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b> OBJETIVO e HIPÓTESIS </b></div>"
       ],
       "metadata": {
@@ -131,8 +114,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **🔅 ORIGEN DE LOS DATOS**\n",
-        "\n",
+        "<a id=\"1\"></a>\n",
+        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b> EL SET DE DATOS </b></div>"
+      ],
+      "metadata": {
+        "id": "RUA-IKofnavn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "**Wine Quality Data Set (Red & White Wine):** <https://www.kaggle.com/datasets/ruthgn/wine-quality-data-set-red-white-wine>\n",
         "\n",
         "Este conjunto de datos contiene registros relacionados con las variedades tinto y blanco del vino Vinho Verde portugués. Contiene información de 1599 muestras de vino tinto y 4898 muestras de vino blanco.\n",
