--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNcBHgfJDXnEFyKm7JFeHBZ",
+      "authorship_tag": "ABX9TyPUz4VpBS1qD8G+mScyY1Ff",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -182,6 +182,74 @@
       ],
       "metadata": {
         "id": "SNLiXq25QnKK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<a id=\"1\"></a>\n",
+        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b> CONTENIDO DEL PROYECTO </b></div>"
+      ],
+      "metadata": {
+        "id": "pjiNlhSBn-2T"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "    \n",
+        "1. <b>PROCESAMIENTO DE DATOS</b></b><br>\n",
+        "   \n",
+        "2. <b>DATA WRANGLIG</b></b><br>\n",
+        "    \n",
+        "3. <b>ANÁLISIS EXPLORATORIO DE DATOS (EDA)</b><br>\n",
+        "        \n",
+        "4. <b>CONCLUSIONES</b><br>\n",
+        "    \n",
+        "5. <b>REFERENCIAS</b><br>\n",
+        "\n",
+        "\n",
+        "<div class=\"toc\">\n",
+        "        <h1>Tabla de Contenidos</h1>\n",
+        "        <ul>\n",
+        "            <li><a href=\"#introduccion\">Introducción</a></li>\n",
+        "            <li><a href=\"#acerca-del-set-de-datos\">Acerca del Set de Datos</a></li>\n",
+        "            <li><a href=\"#objetivos-e-hipotesis\">Objetivos e Hipótesis</a></li>\n",
+        "            <li><a href=\"#procesamiento-de-datos\">Procesamiento de Datos</a>\n",
+        "                <ul>\n",
+        "                    <li><a href=\"#adquisicion-de-datos\">Adquisición de Datos</a></li>\n",
+        "                    <li><a href=\"#data-wrangling\">Data Wrangling</a>\n",
+        "                        <ul>\n",
+        "                            <li><a href=\"#valores-duplicados\">Detección y Remoción de Valores Duplicados</a></li>\n",
+        "                            <li><a href=\"#valores-faltantes\">Imputación de Valores Faltantes</a></li>\n",
+        "                            <li><a href=\"#valores-sospechosos\">Detección y Manejo de Valores Sospechosos</a></li>\n",
+        "                            <li><a href=\"#datos-categoricos\">Manejo de Datos Categóricos</a></li>\n",
+        "                            <li><a href=\"#cardinalidad\">Identificación de la Cardinalidad de las Variables</a></li>\n",
+        "                            <li><a href=\"#outliers\">Detección y Manejo de Outliers</a></li>\n",
+        "                            <li><a href=\"#datos-desbalanceados\">Manejo de Datos Desbalanceados</a></li>\n",
+        "                            <li><a href=\"#feature-engineering\">Feature Engineering (Generación de Nuevas Características)</a></li>\n",
+        "                            <li><a href=\"#normalizacion\">Transformación de Datos (Normalización)</a></li>\n",
+        "                            <li><a href=\"#feature-binning\">Agrupación de Características (Feature Binning)</a></li>\n",
+        "                            <li><a href=\"#reduccion-dimensionalidad\">Reducción de Dimensionalidad</a></li>\n",
+        "                        </ul>\n",
+        "                    </li>\n",
+        "                </ul>\n",
+        "            </li>\n",
+        "            <li><a href=\"#eda\">Análisis Exploratorio de Datos (EDA)</a>\n",
+        "                <ul>\n",
+        "                    <li><a href=\"#analisis-estadistico\">Análisis Estadístico</a></li>\n",
+        "                    <li><a href=\"#distribucion\">Análisis de Distribución de las Variables</a></li>\n",
+        "                    <li><a href=\"#correlacion\">Análisis de Correlación entre Variables</a></li>\n",
+        "                    <li><a href=\"#escalado\">Escalado (Estandarización de los Datos)</a></li>\n",
+        "                </ul>\n",
+        "            </li>\n",
+        "            <li><a href=\"#conclusiones\">Conclusiones</a></li>\n",
+        "            <li><a href=\"#referencias\">Referencias</a></li>\n",
+        "        </ul>\n",
+        "    </div>\n"
+      ],
+      "metadata": {
+        "id": "szp0-J9ZoJTs"
       }
     },
     {
