--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMk8sYIVXw8kVD5pVzZ1uie",
+      "authorship_tag": "ABX9TyPkuKrDtJoLAQi5s60TSPyS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -197,56 +197,43 @@
     {
       "cell_type": "markdown",
       "source": [
-        "    \n",
-        "1. <b>PROCESAMIENTO DE DATOS</b></b><br>\n",
-        "   \n",
-        "2. <b>DATA WRANGLIG</b></b><br>\n",
-        "    \n",
-        "3. <b>ANÁLISIS EXPLORATORIO DE DATOS (EDA)</b><br>\n",
-        "        \n",
-        "4. <b>CONCLUSIONES</b><br>\n",
-        "    \n",
-        "5. <b>REFERENCIAS</b><br>\n",
-        "\n",
-        "\n",
         "<div class=\"toc\">\n",
-        "        <h1>Tabla de Contenidos</h1>\n",
+        "  <ul>\n",
+        "    <li>INTRODUCCIÓN</li>\n",
+        "    <li>OBJETIVOS e HIPÓTESIS</li>\n",
+        "    <li>EL SET DE DATOS</li>\n",
+        "    <li>PROCESAMIENTO DE DATOS\n",
+        "    <ul>\n",
+        "      <li>Adquisición de Datos</li>\n",
+        "      <li>Data Wrangling\n",
         "        <ul>\n",
-        "            <li><a href=\"#introduccion\">Introducción</a></li>\n",
-        "            <li><a href=\"#acerca-del-set-de-datos\">Acerca del Set de Datos</a></li>\n",
-        "            <li><a href=\"#objetivos-e-hipotesis\">Objetivos e Hipótesis</a></li>\n",
-        "            <li><a href=\"#procesamiento-de-datos\">Procesamiento de Datos</a>\n",
-        "                <ul>\n",
-        "                    <li><a href=\"#adquisicion-de-datos\">Adquisición de Datos</a></li>\n",
-        "                    <li><a href=\"#data-wrangling\">Data Wrangling</a>\n",
-        "                        <ul>\n",
-        "                            <li><a href=\"#valores-duplicados\">Detección y Remoción de Valores Duplicados</a></li>\n",
-        "                            <li><a href=\"#valores-faltantes\">Imputación de Valores Faltantes</a></li>\n",
-        "                            <li><a href=\"#valores-sospechosos\">Detección y Manejo de Valores Sospechosos</a></li>\n",
-        "                            <li><a href=\"#datos-categoricos\">Manejo de Datos Categóricos</a></li>\n",
-        "                            <li><a href=\"#cardinalidad\">Identificación de la Cardinalidad de las Variables</a></li>\n",
-        "                            <li><a href=\"#outliers\">Detección y Manejo de Outliers</a></li>\n",
-        "                            <li><a href=\"#datos-desbalanceados\">Manejo de Datos Desbalanceados</a></li>\n",
-        "                            <li><a href=\"#feature-engineering\">Feature Engineering (Generación de Nuevas Características)</a></li>\n",
-        "                            <li><a href=\"#normalizacion\">Transformación de Datos (Normalización)</a></li>\n",
-        "                            <li><a href=\"#feature-binning\">Agrupación de Características (Feature Binning)</a></li>\n",
-        "                            <li><a href=\"#reduccion-dimensionalidad\">Reducción de Dimensionalidad</a></li>\n",
-        "                        </ul>\n",
-        "                    </li>\n",
-        "                </ul>\n",
-        "            </li>\n",
-        "            <li><a href=\"#eda\">Análisis Exploratorio de Datos (EDA)</a>\n",
-        "                <ul>\n",
-        "                    <li><a href=\"#analisis-estadistico\">Análisis Estadístico</a></li>\n",
-        "                    <li><a href=\"#distribucion\">Análisis de Distribución de las Variables</a></li>\n",
-        "                    <li><a href=\"#correlacion\">Análisis de Correlación entre Variables</a></li>\n",
-        "                    <li><a href=\"#escalado\">Escalado (Estandarización de los Datos)</a></li>\n",
-        "                </ul>\n",
-        "            </li>\n",
-        "            <li><a href=\"#conclusiones\">Conclusiones</a></li>\n",
-        "            <li><a href=\"#referencias\">Referencias</a></li>\n",
+        "          <li>Detección y Remoción de Valores Duplicados</li>\n",
+        "          <li>Imputación de Valores Faltantes</li>\n",
+        "          <li>Detección y Manejo de Valores Sospechosos</li>\n",
+        "          <li>Manejo de Datos Categóricos</li>\n",
+        "          <li>Identificación de la Cardinalidad de las Variables</li>\n",
+        "          <li>Detección y Manejo de Outliers</li>\n",
+        "          <li>Manejo de Datos Desbalanceados</li>\n",
+        "          <li>Feature Engineering (Generación de Nuevas Características)</li>\n",
+        "          <li>Transformación de Datos (Normalización)</li>\n",
+        "          <li>Agrupación de Características (Feature Binning)</li>\n",
+        "          <li>Reducción de Dimensionalidad</li>\n",
         "        </ul>\n",
-        "    </div>\n"
+        "      </li>\n",
+        "    </ul>\n",
+        "    </li>\n",
+        "    <li>ANÁLISIS EXPLORATORIO DE DATOS (EDA)\n",
+        "      <ul>\n",
+        "        <li>Análisis Estadístico</li>\n",
+        "        <li>Análisis de Distribución de las Variables</li>\n",
+        "        <li>Análisis de Correlación entre Variables</li>\n",
+        "        <li>Escalado (Estandarización de los Datos)</li>\n",
+        "      </ul>\n",
+        "    </li>\n",
+        "    <li>CONCLUSIONES</li>\n",
+        "    <li>REFERENCIAS</li>\n",
+        "  </ul>\n",
+        "</div>\n"
       ],
       "metadata": {
         "id": "szp0-J9ZoJTs"
