--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPkuKrDtJoLAQi5s60TSPyS",
+      "authorship_tag": "ABX9TyMDgSgtaecURMW2Xnm2U+Bd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -210,14 +210,14 @@
         "          <li>Detección y Remoción de Valores Duplicados</li>\n",
         "          <li>Imputación de Valores Faltantes</li>\n",
         "          <li>Detección y Manejo de Valores Sospechosos</li>\n",
-        "          <li>Manejo de Datos Categóricos</li>\n",
+        "          <li>Manejo de Valores Categóricos 🟡REVISAR </li>\n",
         "          <li>Identificación de la Cardinalidad de las Variables</li>\n",
         "          <li>Detección y Manejo de Outliers</li>\n",
-        "          <li>Manejo de Datos Desbalanceados</li>\n",
-        "          <li>Feature Engineering (Generación de Nuevas Características)</li>\n",
-        "          <li>Transformación de Datos (Normalización)</li>\n",
+        "          <li>Manejo de Datos Desbalanceados 🔴</li>\n",
+        "          <li>Feature Engineering (Generación de Nuevas Características) 🟠</li>\n",
+        "          <li>Transformación de Datos (Normalización) 🔴</li>\n",
         "          <li>Agrupación de Características (Feature Binning)</li>\n",
-        "          <li>Reducción de Dimensionalidad</li>\n",
+        "          <li>Reducción de Dimensionalidad 🔴</li>\n",
         "        </ul>\n",
         "      </li>\n",
         "    </ul>\n",
