--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDgSgtaecURMW2Xnm2U+Bd",
+      "authorship_tag": "ABX9TyMRy9evrSINKUBJpL8eEXEb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -68,6 +68,61 @@
     {
       "cell_type": "markdown",
       "source": [
+        "<a id=\"1\"></a>\n",
+        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b> CONTENIDO DEL PROYECTO </b></div>"
+      ],
+      "metadata": {
+        "id": "pjiNlhSBn-2T"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "<div class=\"toc\">\n",
+        "  <ul>\n",
+        "    <li>INTRODUCCIÓN</li>\n",
+        "    <li>OBJETIVOS e HIPÓTESIS</li>\n",
+        "    <li>EL SET DE DATOS</li>\n",
+        "    <li>PROCESAMIENTO DE DATOS\n",
+        "    <ul>\n",
+        "      <li>Adquisición de Datos</li>\n",
+        "      <li>Data Wrangling\n",
+        "        <ul>\n",
+        "          <li>Detección y Remoción de Valores Duplicados</li>\n",
+        "          <li>Imputación de Valores Faltantes</li>\n",
+        "          <li>Detección y Manejo de Valores Sospechosos</li>\n",
+        "          <li>Manejo de Valores Categóricos 🟡REVISAR </li>\n",
+        "          <li>Identificación de la Cardinalidad de las Variables</li>\n",
+        "          <li>Detección y Manejo de Outliers</li>\n",
+        "          <li>Manejo de Datos Desbalanceados 🔴</li>\n",
+        "          <li>Feature Engineering (Generación de Nuevas Características) 🟠</li>\n",
+        "          <li>Transformación de Datos (Normalización) 🔴</li>\n",
+        "          <li>Agrupación de Características (Feature Binning)</li>\n",
+        "          <li>Reducción de Dimensionalidad 🔴</li>\n",
+        "        </ul>\n",
+        "      </li>\n",
+        "    </ul>\n",
+        "    </li>\n",
+        "    <li>ANÁLISIS EXPLORATORIO DE DATOS (EDA)\n",
+        "      <ul>\n",
+        "        <li>Análisis Estadístico</li>\n",
+        "        <li>Análisis de Distribución de las Variables</li>\n",
+        "        <li>Análisis de Correlación entre Variables</li>\n",
+        "        <li>Escalado (Estandarización de los Datos)</li>\n",
+        "      </ul>\n",
+        "    </li>\n",
+        "    <li>CONCLUSIONES</li>\n",
+        "    <li>REFERENCIAS</li>\n",
+        "  </ul>\n",
+        "</div>\n"
+      ],
+      "metadata": {
+        "id": "szp0-J9ZoJTs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "<a id=\"1\" href=\"#introduccion\"></a>\n",
         "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b> INTRODUCCION </b></div>"
       ],
@@ -78,8 +133,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Mediante este proyecto se pretende analizar los datos vinculados a la calidad de los vinos de Portugal. Para ello, se plantearán distintas hipótesis que serán evaluadas mediante análisis estadístico. Se espera, además, identificar patrones y/o tendencias que pudieran predecir la calificación promedio de un vino.\n",
         "![Datset Cover](https://github.com/eugeinga/CODER-DataScienceII/raw/main/IMG/IMG-dataset-cover.jpg)"
+      ],
+      "metadata": {
+        "id": "J6pay3sSBpXv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Mediante este proyecto se pretende analizar los datos vinculados a la calidad de los vinos de Portugal. Para ello, se plantearán distintas hipótesis que serán evaluadas mediante análisis estadístico. Se espera, además, identificar patrones y/o tendencias que pudieran predecir la calificación promedio de un vino."
       ],
       "metadata": {
         "id": "48SU4MbJguaY"
@@ -182,61 +245,6 @@
       ],
       "metadata": {
         "id": "SNLiXq25QnKK"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "<a id=\"1\"></a>\n",
-        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b> CONTENIDO DEL PROYECTO </b></div>"
-      ],
-      "metadata": {
-        "id": "pjiNlhSBn-2T"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "<div class=\"toc\">\n",
-        "  <ul>\n",
-        "    <li>INTRODUCCIÓN</li>\n",
-        "    <li>OBJETIVOS e HIPÓTESIS</li>\n",
-        "    <li>EL SET DE DATOS</li>\n",
-        "    <li>PROCESAMIENTO DE DATOS\n",
-        "    <ul>\n",
-        "      <li>Adquisición de Datos</li>\n",
-        "      <li>Data Wrangling\n",
-        "        <ul>\n",
-        "          <li>Detección y Remoción de Valores Duplicados</li>\n",
-        "          <li>Imputación de Valores Faltantes</li>\n",
-        "          <li>Detección y Manejo de Valores Sospechosos</li>\n",
-        "          <li>Manejo de Valores Categóricos 🟡REVISAR </li>\n",
-        "          <li>Identificación de la Cardinalidad de las Variables</li>\n",
-        "          <li>Detección y Manejo de Outliers</li>\n",
-        "          <li>Manejo de Datos Desbalanceados 🔴</li>\n",
-        "          <li>Feature Engineering (Generación de Nuevas Características) 🟠</li>\n",
-        "          <li>Transformación de Datos (Normalización) 🔴</li>\n",
-        "          <li>Agrupación de Características (Feature Binning)</li>\n",
-        "          <li>Reducción de Dimensionalidad 🔴</li>\n",
-        "        </ul>\n",
-        "      </li>\n",
-        "    </ul>\n",
-        "    </li>\n",
-        "    <li>ANÁLISIS EXPLORATORIO DE DATOS (EDA)\n",
-        "      <ul>\n",
-        "        <li>Análisis Estadístico</li>\n",
-        "        <li>Análisis de Distribución de las Variables</li>\n",
-        "        <li>Análisis de Correlación entre Variables</li>\n",
-        "        <li>Escalado (Estandarización de los Datos)</li>\n",
-        "      </ul>\n",
-        "    </li>\n",
-        "    <li>CONCLUSIONES</li>\n",
-        "    <li>REFERENCIAS</li>\n",
-        "  </ul>\n",
-        "</div>\n"
-      ],
-      "metadata": {
-        "id": "szp0-J9ZoJTs"
       }
     },
     {
