--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRy9evrSINKUBJpL8eEXEb",
+      "authorship_tag": "ABX9TyOJJerNxLQeRPxrnU0JJGKL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,7 +91,6 @@
         "          <li>Detección y Remoción de Valores Duplicados</li>\n",
         "          <li>Imputación de Valores Faltantes</li>\n",
         "          <li>Detección y Manejo de Valores Sospechosos</li>\n",
-        "          <li>Manejo de Valores Categóricos 🟡REVISAR </li>\n",
         "          <li>Identificación de la Cardinalidad de las Variables</li>\n",
         "          <li>Detección y Manejo de Outliers</li>\n",
         "          <li>Manejo de Datos Desbalanceados 🔴</li>\n",
@@ -790,9 +789,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **🔹 Valores Duplicados**\n",
+        "## **🔘 Detección y Remoción de Valores Duplicados**\n",
         "\n",
-        "##### Se eliminan los registros duplicados"
+        "##### Se identifican y evalúa la remoción de los registros duplicados"
       ],
       "metadata": {
         "id": "N3J0mGR_LTkO"
@@ -837,7 +836,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **🔹 Valores faltantes**\n",
+        "## **🔘 Imputación de Valores Faltantes**\n",
         "\n",
         "Se identifican los valores nulos en cada una de las columnas del dataset y se rellenan con la media de cada variable según tipo de vino y calidad."
       ],
@@ -1802,7 +1801,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **🔹 Valores sospechosos**\n",
+        "## **🔘 Detección y Manejo de Valores Sospechosos**\n",
         "\n",
         "##### Se consideran valores sospechosos los siguientes:\n",
         "* los valores en cero (a excepción de 'ácido cítrico'),\n",
