--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJJerNxLQeRPxrnU0JJGKL",
+      "authorship_tag": "ABX9TyO3PrlXyzpoa/phRh2OCpD+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,7 +94,7 @@
         "          <li>Identificación de la Cardinalidad de las Variables</li>\n",
         "          <li>Detección y Manejo de Outliers</li>\n",
         "          <li>Manejo de Datos Desbalanceados 🔴</li>\n",
-        "          <li>Feature Engineering (Generación de Nuevas Características) 🟠</li>\n",
+        "          <li>Feature Engineering (Generación de Nuevas Características) 🟡</li>\n",
         "          <li>Transformación de Datos (Normalización) 🔴</li>\n",
         "          <li>Agrupación de Características (Feature Binning)</li>\n",
         "          <li>Reducción de Dimensionalidad 🔴</li>\n",
