--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOZGc+KvGuZIN4XTthQX6C2",
+      "authorship_tag": "ABX9TyMDc46oJJ4HZPh6WMxtoLJj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1196,7 +1196,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **🔘 Detección y Remoción de Valores Duplicados**\n",
+        "### **🔘 Detección y Remoción de Valores Duplicados**\n",
         "\n",
         "##### Se identifican y evalúa la remoción de los registros duplicados"
       ],
@@ -1243,7 +1243,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **🔘 Imputación de Valores Faltantes**\n",
+        "### **🔘 Imputación de Valores Faltantes**\n",
         "\n",
         "Se identifican los valores nulos en cada una de las columnas del dataset y se rellenan con la media de cada variable según tipo de vino y calidad."
       ],
@@ -2208,7 +2208,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **🔘 Detección y Manejo de Valores Sospechosos**\n",
+        "### **🔘 Detección y Manejo de Valores Sospechosos**\n",
         "\n",
         "---\n",
         "\n",
@@ -2437,9 +2437,18 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "RfEBwD9rIDfr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
-        "## **🔘 Feature Engineering (Generación de Nuevas Características)**"
+        "### **🔘 Feature Engineering (Generación de Nuevas Características)**"
       ],
       "metadata": {
         "id": "YVnRQLWqGHyk"
@@ -2455,7 +2464,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **🔹 Agrupacion de Características (Feature Binning)**\n",
+        "### **🔘 Agrupacion de Características (Feature Binning)**\n",
         "\n",
         "La Ingeniería de Catacterísticas (***Feature Engineering***) implica transformar datos sin procesar en características que mejoren el rendimiento de los modelos de machine learning.\n",
         "\n",
@@ -4232,8 +4241,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **3️⃣ Análisis Exploratorio de Datos (EDA)**\n",
-        "---\n",
+        "<a id=\"1\"></a>\n",
+        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b> ANÁLISIS EXPLORATORIO DE DATOS </b></div>"
+      ],
+      "metadata": {
+        "id": "Q17TVK9uH4qm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Mediante en **Análisis Exploratorio de Datos** se pretende explorar y comprender los datos en detalle a fin de que cualquier análisis posterior sea válido y significativo.\n",
         "\n",
         "Como parte de esta etapa se procederá a:\n",
@@ -4249,7 +4266,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **🔹 Análisis Estadístico**\n"
+        "### **🔅 ANÁLISIS ESTADÍSTICO**\n",
+        "----"
       ],
       "metadata": {
         "id": "ccifFr5Uwpim"
@@ -5414,7 +5432,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **🔹 Identificación de Outliers**"
+        "### **🔅 DETECCIÓN Y MANEJO DE OUTLIERS**\n",
+        "----"
       ],
       "metadata": {
         "id": "QUJpJqmGysfs"
@@ -8738,7 +8757,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **🔹 Análisis de Distribución de los Datos**\n"
+        "### **🔅 ANÁLISIS DE LA DISTRIBUCIÓN DE LOS DATOS**\n",
+        "----\n"
       ],
       "metadata": {
         "id": "9cR15dZS9fkr"
@@ -11278,8 +11298,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **🔹 Análisis de corelación**\n",
-        "\n",
+        "### **🔅 ANÁLISIS DE CORRELACIÓN ENTRE VARIABLES**\n",
+        "----"
+      ],
+      "metadata": {
+        "id": "ZpIPfnT-I9Xc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Analizo la correlación de las variables por tipo de vino."
       ],
       "metadata": {
@@ -11402,9 +11430,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **🔹 Escalado: Estandarización de los Datos**\n",
-        "---\n",
-        "\n",
+        "### **🔅 ESCALADO: Estandarización de los datos**\n",
+        "----"
+      ],
+      "metadata": {
+        "id": "JJS_kiwUJIFh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "El ***Escalado*** es una parte importante de la Ingeniería de Características (Feature Engineering). Se trata de una técnica que ajusta los valores de las variables para que estén dentro de un rango específico. Esto es crucial en modelos de machine learning ya que muchos algoritmos de machine learning son sensibles a las diferencias de escala entre las variables, pudiendo afectar negativamente el rendimiento del modelo.\n",
         "\n",
         "Debido a que el dataset con el que se está trabajando tiene valores extremos que no serán eliminados, utilizaremos el método ***Robust Scaling*** que utiliza la mediana y el rango intercuartílico (IQR) en lugar de la media y la desviación estándar, lo que lo hace más robusto a los outliers:\n",
