--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDc46oJJ4HZPh6WMxtoLJj",
+      "authorship_tag": "ABX9TyP8SNajwhMei4AcoMfCHfgq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,7 +110,7 @@
         "        <li>Escalado (Estandarización de los Datos)</li>\n",
         "      </ul>\n",
         "    </li>\n",
-        "    <li>CONCLUSIONES</li>\n",
+        "    <li>CONCLUSIÓN</li>\n",
         "    <li>REFERENCIAS</li>\n",
         "  </ul>\n",
         "</div>\n"
@@ -11874,8 +11874,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **CONCLUSIONES**\n",
-        "\n",
+        "<a id=\"1\" href=\"#introduccion\"></a>\n",
+        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b> CONCLUSIÓN </b></div>"
+      ],
+      "metadata": {
+        "id": "yIT5mKx0Jcl6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "El análisis del dataset de vinos revela varias características importantes.\n",
         "\n",
         "* Se identificaron y eliminaron outliers, representando un pequeño porcentaje del total de datos.  \n",
@@ -11890,8 +11898,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **REFERENCIAS**\n",
-        "\n",
+        "<a id=\"1\" href=\"#introduccion\"></a>\n",
+        "# <div style=\"padding:20px;color:yellow;margin:0;font-size:30px;font-family:Verdana;text-align:center;display:fill;border-radius:5px;background-color:#333333;overflow:hidden\"><b> REFERENCIAS </b></div>"
+      ],
+      "metadata": {
+        "id": "tBqDxHHpJg5g"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "* https://www.usc.gal/caa/MetAnalisisStgo1/enologia.pdf"
       ],
       "metadata": {
