--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrkE9jfJ67gZed3AnVEQWg",
+      "authorship_tag": "ABX9TyPc7oGWeXs0L8UZ8t+VojYZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,9 +105,9 @@
         "      <ul>\n",
         "        <li>Análisis Estadístico</li>\n",
         "        <li>Detección y Manejo de Outliers</li>\n",
-        "        <li>Análisis de Distribución de las Variables</li>\n",
-        "        <li>Análisis de Correlación entre Variables</li>\n",
-        "        <li>Escalado (Estandarización de los Datos)</li>\n",
+        "        <li>Análisis de Distribución de las Variables 🟡</li>\n",
+        "        <li>Análisis de Correlación entre Variables 🟡</li>\n",
+        "        <li>Escalado (Estandarización de los Datos) 🟡</li>\n",
         "      </ul>\n",
         "    </li>\n",
         "    <li>CONCLUSIÓN</li>\n",
