--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPc7oGWeXs0L8UZ8t+VojYZ",
+      "authorship_tag": "ABX9TyMHMqrXu28k3NIHeo5za2S7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -103,10 +103,17 @@
         "    </li>\n",
         "    <li>ANÁLISIS EXPLORATORIO DE DATOS (EDA)\n",
         "      <ul>\n",
-        "        <li>Análisis Estadístico</li>\n",
-        "        <li>Detección y Manejo de Outliers</li>\n",
-        "        <li>Análisis de Distribución de las Variables 🟡</li>\n",
-        "        <li>Análisis de Correlación entre Variables 🟡</li>\n",
+        "        <li>Análisis Univariado</li>\n",
+        "          <ul>\n",
+        "            <li>Análisis Estadístico</li>\n",
+        "            <li>Detección y Manejo de Outliers</li>\n",
+        "            <li>Análisis de Distribución de las Variables 🟡</li>\n",
+        "          </ul>\n",
+        "        <li>Análisis Bivariado</li>\n",
+        "          <ul>\n",
+        "            <li>Análisis de Correlación y Dependencia entre Variables 🟡</li>\n",
+        "          </ul>\n",
+        "        <li>Análisis Multivariado 🟡</li>\n",
         "        <li>Escalado (Estandarización de los Datos) 🟡</li>\n",
         "      </ul>\n",
         "    </li>\n",
