--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMHMqrXu28k3NIHeo5za2S7",
+      "authorship_tag": "ABX9TyPl2ct2NdWIsP1+4/nCFQ9d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,7 +95,7 @@
         "          <li>Manejo de Datos Desbalanceados 🔴</li>\n",
         "          <li>Feature Engineering (Generación de Nuevas Características) 🟡</li>\n",
         "          <li>Transformación de Datos (Normalización) 🔴</li>\n",
-        "          <li>Agrupación de Características (Feature Binning)</li>\n",
+        "          <li>Feature Binning (Agrupación de Características)</li>\n",
         "          <li>Reducción de Dimensionalidad 🔴</li>\n",
         "        </ul>\n",
         "      </li>\n",
@@ -2471,7 +2471,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **🔘 Agrupacion de Características (Feature Binning)**\n",
+        "### **🔘 Feature Binning (Agrupacion de Características)**\n",
         "\n",
         "La Ingeniería de Catacterísticas (***Feature Engineering***) implica transformar datos sin procesar en características que mejoren el rendimiento de los modelos de machine learning.\n",
         "\n",
