--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPl2ct2NdWIsP1+4/nCFQ9d",
+      "authorship_tag": "ABX9TyNIayJRk1gpimuB/jYHONGw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4273,11 +4273,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **🔅 ANÁLISIS ESTADÍSTICO**\n",
+        "### **🔅 ANÁLISIS UNIVARIADO**\n",
         "----"
       ],
       "metadata": {
         "id": "ccifFr5Uwpim"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **🔘 Análisis Estadístico**"
+      ],
+      "metadata": {
+        "id": "8t37OGx-ts2y"
       }
     },
     {
@@ -5439,8 +5448,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **🔅 DETECCIÓN Y MANEJO DE OUTLIERS**\n",
-        "----"
+        "### **🔘 Detección y Manejo de Outliers**"
       ],
       "metadata": {
         "id": "QUJpJqmGysfs"
@@ -8764,8 +8772,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **🔅 ANÁLISIS DE LA DISTRIBUCIÓN DE LOS DATOS**\n",
-        "----\n"
+        "### **🔘 Análisis de Distribución de los Datos**"
       ],
       "metadata": {
         "id": "9cR15dZS9fkr"
@@ -11305,11 +11312,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **🔅 ANÁLISIS DE CORRELACIÓN ENTRE VARIABLES**\n",
+        "### **🔅 ANÁLISIS BIVARIADO**\n",
         "----"
       ],
       "metadata": {
         "id": "ZpIPfnT-I9Xc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **🔘 Análisis de Correlación y Dependencias entre Variables**"
+      ],
+      "metadata": {
+        "id": "3jauZ6JIuQXx"
       }
     },
     {
@@ -11432,6 +11448,16 @@
       ],
       "metadata": {
         "id": "p8QBJxmqVpAO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **🔅 ANÁLISIS MULTIVARIADO**\n",
+        "----"
+      ],
+      "metadata": {
+        "id": "BG0OAIzmuaW4"
       }
     },
     {
