--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMnCYwCZfogBCJynaKz/KU3",
+      "authorship_tag": "ABX9TyOL6bGPRpGsSEcM+AQVafMS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9044,8 +9044,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Sabemos que la **asimetría** (*skewness*) está entre -0.5 y 0.5 lo datos se consideran muy similares a una distribución simétrica, si la asimetría está entre -1 y -0.5 o entre 0.5 y 1 se considera moderada y cuando es mayor que 1 o menor que 1 se considera altamente asimétrica.\n",
+        "\n",
+        "Por su parte, una gran **curtosis** implica una mayor concentración de valores de la variable, tanto muy próximos a las medias de la distribución (pico) como muy alejados de ella (colas)."
+      ],
+      "metadata": {
+        "id": "UXmch7IaQR19"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# Se analiza la asimetría de las variables\n",
+        "\n",
         "numerical_features = ['fixed acidity','volatile acidity','citric acid', 'residual sugar','chlorides','free sulfur dioxide','total sulfur dioxide','density','pH','sulphates','alcohol']\n",
         "df_long = pd.melt(df, id_vars=['type'], value_vars=caracteristica, var_name='feature', value_name='value')\n",
         "\n",
@@ -9053,11 +9066,11 @@
         "  print(f'Estadística de la variable \"{feature}\": {stats.describe(df[feature])}')"
       ],
       "metadata": {
-        "id": "KDSPoZYTOQZC",
-        "outputId": "9701ff35-f8d2-47dc-dce5-8a154c7a0ab2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "KDSPoZYTOQZC",
+        "outputId": "9701ff35-f8d2-47dc-dce5-8a154c7a0ab2"
       },
       "execution_count": 62,
       "outputs": [
