--- a/DataScienceII_EugeniaIngaramo.ipynb
+++ b/DataScienceII_EugeniaIngaramo.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOL6bGPRpGsSEcM+AQVafMS",
+      "authorship_tag": "ABX9TyP0zLmAG7rJd0T3Y9/JjETO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -9046,9 +9046,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Sabemos que la **asimetría** (*skewness*) está entre -0.5 y 0.5 lo datos se consideran muy similares a una distribución simétrica, si la asimetría está entre -1 y -0.5 o entre 0.5 y 1 se considera moderada y cuando es mayor que 1 o menor que 1 se considera altamente asimétrica.\n",
+        "Un valor de **asimetría** (*skewness*) cercano a 0 (entre -0.5 y 0.5) indica que los datos están simétricamente distribuidos alrededor de la media. Valores positivos indican una distribución sesgada a la derecha (cola larga a la derecha), mientras que valores negativos indican una distribución sesgada a la izquierda (cola larga a la izquierda)\n",
         "\n",
-        "Por su parte, una gran **curtosis** implica una mayor concentración de valores de la variable, tanto muy próximos a las medias de la distribución (pico) como muy alejados de ella (colas)."
+        "Por su parte, la **curtosis** (*kurtosis*) mide la \"agudeza\" de la distribución de los datos (o la concentración de los valores de la variable). La curtosis de Fisher, que es la que calcula 'scipy.stats.describe', está normalizada para que una distribución normal tenga una curtosis de 0. Valores positivos indican mayor concentración de los datos en torno a la media; es decir, una distribución con colas más pesadas (más picos, menos colas). Mientras que valores negativos indican una distribución de los datos más alejados de la media; es decir, con colas más ligeras (menos picos, más colas)."
       ],
       "metadata": {
         "id": "UXmch7IaQR19"
